--- a/main/static/css/styles.css
+++ b/main/static/css/styles.css
@@ -810,7 +810,7 @@ h1, h2, h3, h4, h5 {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 75vh;
+  height: 80%;
   padding: 0px;
   margin: 50px;
   min-width: 400px;
@@ -826,9 +826,9 @@ h1, h2, h3, h4, h5 {
   background-image: url('https://images.unsplash.com/photo-1582139329536-e7284fece509?q=80&w=2080&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
   background-size: cover; 
   background-position: center;
-  /*background-color: #ff9d00;*/
   height: 100%;
   max-height: 100%;
+  min-height: 85vh;
 }
 
 .login-form-background {
@@ -849,6 +849,8 @@ h1, h2, h3, h4, h5 {
   background-color: #f7f7f7;
   min-width: 350px;
   max-width: 80%;
+  min-height: 85vh;
+  overflow-y: auto;
 }
 
 .login-logo {
