feat: Auction creation image upload changes #2
Auction creation page now allows users to delete
specific images from the file uploader before
submitting the form

--- a/main/static/css/styles.css
+++ b/main/static/css/styles.css
@@ -1031,3 +1031,11 @@ h1, h2, h3, h4, h5 {
     flex-direction: column;
   }
 }
+
+.image-name {
+  overflow: hidden;
+  display: inline-block;
+  text-overflow: ellipsis;
+  max-width: 200px;
+  white-space: nowrap;
+}
