--- a/main/page_create/templates/create.html
+++ b/main/page_create/templates/create.html
@@ -5,10 +5,10 @@
 {% block content %}
 
 <!-- Heading -->
-<h1 class="mt-5 mb-4 text-center">Create Auction</h1>
+<h1 class="mt-5 text-center">Create Auction</h1>
 <meta name="auth-fee" content="{{ authentication_fee }}">
 
-<div id="auction-form" class="create-auction-container p-4">
+<div id="auction-form" class="create-auction-container p-5">
   <form action="#" method="POST" name="CreateAuction" id="create-auction-form" enctype="multipart/form-data">
     {{ form.csrf_token }}
     <!-- Title -->
