styles: media queries for login page
Login page now scales with various mobile devices
using media queries.

--- a/main/page_auth/templates/login.html
+++ b/main/page_auth/templates/login.html
@@ -31,7 +31,7 @@
       </div>
       <br>
       <div style="text-align: center; align-items: center;">
-        <h1 class="email-login-break" style="font-size: 13px;">
+        <h1 class="email-login-break" style="font-size: 0.6rem;">
           <span>or continue with email</span>
         </h1>
       </div>
