styles: minor register page style changes
Placeholder text now scales for mobile devices.

Register form labels now match site wide font.

--- a/main/page_auth/templates/register.html
+++ b/main/page_auth/templates/register.html
@@ -7,7 +7,7 @@
 <div class="login-wrapper">
 
   <div class="login-form-background">
-    <div class="login-container">
+    <div class="login-container register-container">
       <!-- Error Messages -->
       {% for error in form.username.errors %} 
       <div class="alert alert-danger" role="alert">{{ error }}</div>
