--- a/main/static/css/styles.css
+++ b/main/static/css/styles.css
@@ -3,7 +3,7 @@
 :root {
   --primary-color: #000;
   --secondary-color: hsl(0, 0%, 100%);
-  --accent-color: #f3d9af;
+  --accent-color: #f5c98e;
   --tertiary-color: #f0f0f0;
   --danger-color: #dc3545;
   --success-color: #28a745;
