fix: limited graph size

--- a/main/page_dashboard/templates/dashboard_manager.html
+++ b/main/page_dashboard/templates/dashboard_manager.html
@@ -270,7 +270,9 @@
             <button type="button" class="btn btn-sm btn-outline-secondary" data-period="1w">1 Week</button>
           </div>
         </div>
-        <canvas id="revenueChart" width="400" height="200"></canvas>
+        <div class="chart-container" style="max-height: 300px; max-width: 100%; overflow-x: auto;">
+          <canvas id="revenueChart"></canvas>
+        </div>
       </div>
     </div>
   </div>
