--- a/main/static/css/styles.css
+++ b/main/static/css/styles.css
@@ -900,7 +900,7 @@ h1, h2, h3, h4, h5 {
 .pass-container .form-control:focus,
 .user-container .form-control:focus,
 .input-container:focus {
-  border-bottom: 2px solid #ff9d00;
+  border-bottom: 2px solid var(--accent-color);
 }
 
 .pass-container i, .user-container i {
@@ -939,7 +939,7 @@ h1, h2, h3, h4, h5 {
 }
 
 .google-btn:hover{
-  border: 2px solid #ff9d00;
+  border: 2px solid var(--accent-color);
 }
 
 .google-icon {
