--- a/main/static/css/availability-styles.css
+++ b/main/static/css/availability-styles.css
@@ -8,9 +8,7 @@
     margin-bottom: 1.5rem;
   }
   
-  /* -------------------------- */
   /* Availability Input & Select Styles (Table Elements) */
-  /* -------------------------- */
   .availability-input,
   .availability-select {
     width: 100%; /* Stretch to fill the cell */
@@ -33,8 +31,8 @@
   
   /* Disabled state for table inputs/selects */
   .disabled-input {
-    background-color: #d3d3d3 !important;  /* Darker disabled shade */
-    color: #2c2c2c !important;
+    background-color: #707070 !important;
+    color: #FFF !important;
     cursor: not-allowed;
     opacity: 1;
   }
