--- a/main/page_auth/templates/update_user.html
+++ b/main/page_auth/templates/update_user.html
@@ -7,118 +7,135 @@
 <!-- Heading -->
 <h1 class="mt-5 mb-4 text-center">Update User Details</h1>
 
+<div class="row">
+  <!-- Left Sidebar with clickable items -->
+  <div class="col-md-3">
+      <ul class="list-group">
+          <li class="list-group-item" id="username-link">Username</li>
+          <li class="list-group-item" id="email-link">Email</li>
+          <li class="list-group-item" id="password-link">Password</li>
+      </ul>
+  </div>
 
-<div class="update-form-wrapper">
+  <div class="col-md-9">
+    <!-- Display block ensures username form opens by default -->
+    <div id="username-form" class="form-container" style="display: block;">
+      <h3>Update Username</h3>
+      <!--Update Username-->
+      <form action="#" method="POST" name="UpdateUsername" id="update-username-form" action="{{ url_for('auth_page.update_user') }}">
+        {{ update_username_form.csrf_token }}
+        <div>
+          Current username: {{ current_user.username }}
+        </div>
+        <div class="form-group">
+          <label for="new-username" class="form-label">
+            New Username
+          </label>
+          {{ update_username_form.new_username(class_="form-control required-field", placeholder="Enter a new username", id_="new-username", maxlength_="16", autocomplete="username") }}
+          {% for error in update_username_form.new_username.errors %}
+            <div class="alert alert-danger" role="alert">
+              {{ error }}
+            </div>
+          {% endfor %}
+        </div>
+        <div class="form-group">
+          <label for="current-password" class="form-label">
+            Please enter your current password to confirm changes:
+          </label>
+          {{ update_username_form.current_password(class_="form-control required-field", placeholder="Enter your current password", id_="current-password", autocomplete="current-password") }}
+          {% for error in update_username_form.current_password.errors %}
+            <div class="alert alert-danger" role="alert">
+              {{ error }}
+            </div>
+          {% endfor %}
+        </div>
+        <div class="form-group">
+          {{ update_username_form.submit(class_="btn btn-primary") }}
+        </div>
+      </form>
+    </div>
 
-  <!--Update Username-->
-  <form action="#" method="POST" name="UpdateUsername" id="update-username-form" action="{{ url_for('auth_page.update_user') }}">
-    {{ update_username_form.csrf_token }}
-    <div>
-      Current username: {{ current_user.username }}
-    </div>
-    <div class="form-group">
-      <label for="new-username" class="form-label">
-        New Username
-      </label>
-      {{ update_username_form.new_username(class_="form-control required-field", placeholder="Enter a new username", id_="new-username", maxlength_="16", autocomplete="username") }}
-      {% for error in update_username_form.new_username.errors %}
-        <div class="alert alert-danger" role="alert">
-          {{ error }}
+    <!--Update Email-->
+    <div id="email-form" class="form-container" style="display: none;">
+      <h3>Update Email</h3>
+      <form action="#" method="POST" name="UpdateEmail" id="update-email-form" action="{{ url_for('auth_page.update_user') }}">
+        {{ update_email_form.csrf_token }}
+        <div>
+          Current email: {{ masked_email }}
         </div>
-      {% endfor %}
-    </div>
-    <div class="form-group">
-      <label for="current-password" class="form-label">
-        Please enter your current password to confirm changes:
-      </label>
-      {{ update_username_form.current_password(class_="form-control required-field", placeholder="Enter your current password", id_="current-password", autocomplete="current-password") }}
-      {% for error in update_username_form.current_password.errors %}
-        <div class="alert alert-danger" role="alert">
-          {{ error }}
+        <div class="form-group">
+          <label for="new-email" class="form-label">
+            New Email
+          </label>
+          {{ update_email_form.new_email(class_="form-control required-field", placeholder="Enter your new email", id_="new-email", maxlength_="50", autocomplete="email") }}
+          {% for error in update_email_form.new_email.errors %} 
+            <div class="alert alert-danger" role="alert">
+              {{ error }}
+            </div>
+          {% endfor %}
         </div>
-      {% endfor %}
-    </div>
-    <div class="form-group">
-      {{ update_username_form.submit(class_="btn btn-primary") }}
-    </div>
-  </form>
-  <br>
-  <br>
-  <!--Update Email-->
-  <form action="#" method="POST" name="UpdateEmail" id="update-email-form" action="{{ url_for('auth_page.update_user') }}">
-    {{ update_email_form.csrf_token }}
-    <div>
-      Current email: {{ masked_email }}
-    </div>
-    <div class="form-group">
-      <label for="new-email" class="form-label">
-        New Email
-      </label>
-      {{ update_email_form.new_email(class_="form-control required-field", placeholder="Enter your new email", id_="new-email", maxlength_="50", autocomplete="email") }}
-      {% for error in update_email_form.new_email.errors %} 
-        <div class="alert alert-danger" role="alert">
-          {{ error }}
+        <div class="form-group">
+          <label for="current-password-email" class="form-label">
+            Please enter your current password to confirm changes:
+          </label>
+          {{ update_email_form.current_password(class_="form-control required-field", placeholder="Enter your current password", id_="current-password-email", autocomplete="current-password") }}
+          {% for error in update_email_form.current_password.errors %} 
+            <div class="alert alert-danger" role="alert">
+              {{ error }}
+            </div>
+          {% endfor %}
         </div>
-      {% endfor %}
-    </div>
-    <div class="form-group">
-      <label for="current-password-email" class="form-label">
-        Please enter your current password to confirm changes:
-      </label>
-      {{ update_email_form.current_password(class_="form-control required-field", placeholder="Enter your current password", id_="current-password-email", autocomplete="current-password") }}
-      {% for error in update_email_form.current_password.errors %} 
-        <div class="alert alert-danger" role="alert">
-          {{ error }}
+        <div class="form-group">
+          {{ update_email_form.submit(class_="btn btn-primary") }}
         </div>
-      {% endfor %}
+      </form>
     </div>
-    <div class="form-group">
-      {{ update_email_form.submit(class_="btn btn-primary") }}
-    </div>
-  </form>
-  <br>
-  <br>
-  <!--Update Password-->
-  <form action="#" method="POST" name="UpdatePassword" id="update-password-form" action="{{ url_for('auth_page.update_user') }}">
-    {{ update_password_form.csrf_token }}
-    <div class="form-group">
-      <label for="current-password-password" class="form-label">
-        Current Password
-      </label>
-      {{ update_password_form.current_password(class_="form-control required-field", placeholder="Enter your current password", id_="current-password-password", autocomplete="current-password") }}
-      {% for error in update_password_form.current_password.errors %} 
-        <div class="alert alert-danger" role="alert">
-          {{ error }}
+
+    <!--Update Password-->
+    <div id="password-form" class="form-container" style="display: none;">
+      <h3>Update Password</h3>
+      <form action="#" method="POST" name="UpdatePassword" id="update-password-form" action="{{ url_for('auth_page.update_user') }}">
+        {{ update_password_form.csrf_token }}
+        <div class="form-group">
+          <label for="current-password-password" class="form-label">
+            Current Password
+          </label>
+          {{ update_password_form.current_password(class_="form-control required-field", placeholder="Enter your current password", id_="current-password-password", autocomplete="current-password") }}
+          {% for error in update_password_form.current_password.errors %} 
+            <div class="alert alert-danger" role="alert">
+              {{ error }}
+            </div>
+          {% endfor %}
         </div>
-      {% endfor %}
-    </div>
-    <div class="form-group">
-      <label for="new-password" class="form-label">
-        New Password
-      </label>
-      {{ update_password_form.new_password(class_="form-control required-field", placeholder="Enter a new password", id_="new-password", minlength_="8", maxlength_="24", autocomplete="new-password") }}
-      {% for error in update_password_form.new_password.errors %} 
-        <div class="alert alert-danger" role="alert">
-          {{ error }}
+        <div class="form-group">
+          <label for="new-password" class="form-label">
+            New Password
+          </label>
+          {{ update_password_form.new_password(class_="form-control required-field", placeholder="Enter a new password", id_="new-password", minlength_="8", maxlength_="24", autocomplete="new-password") }}
+          {% for error in update_password_form.new_password.errors %} 
+            <div class="alert alert-danger" role="alert">
+              {{ error }}
+            </div>
+          {% endfor %}
         </div>
-      {% endfor %}
-    </div>
-    <div class="form-group">
-      <label for="confirm-password" class="form-label">
-        Confirm New Password
-      </label>
-      {{ update_password_form.confirm_password(class_="form-control required-field", placeholder="Confirm your new password", id_="confirm-password", minlength_="8", maxlength_="24", autocomplete="new-password") }}
-      {% for error in update_password_form.confirm_password.errors %} 
-        <div class="alert alert-danger" role="alert">
-          {{ error }}
+        <div class="form-group">
+          <label for="confirm-password" class="form-label">
+            Confirm New Password
+          </label>
+          {{ update_password_form.confirm_password(class_="form-control required-field", placeholder="Confirm your new password", id_="confirm-password", minlength_="8", maxlength_="24", autocomplete="new-password") }}
+          {% for error in update_password_form.confirm_password.errors %} 
+            <div class="alert alert-danger" role="alert">
+              {{ error }}
+            </div>
+          {% endfor %}
         </div>
-      {% endfor %}
+        <div class="form-group">
+          {{ update_password_form.submit(class_="btn btn-primary") }}
+        </div>
+      </form>
     </div>
-    <div class="form-group">
-      {{ update_password_form.submit(class_="btn btn-primary") }}
-    </div>
-  </form>
+  </div>
 </div>
 <!-- Scripts -->
-
+<script src="{{ url_for('static', filename='js/revealUpdateUserForms.js') }}"></script>
 {% endblock %}
