--- a/main/static/css/styles.css
+++ b/main/static/css/styles.css
@@ -1171,7 +1171,7 @@ h1, h2, h3, h4, h5 {
 .update-backdrop {
   background: linear-gradient(to right, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.7)), url('https://images.unsplash.com/photo-1514195037031-83d60ed3b448?q=80&w=2342&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
   width: 100%;
-  height: 80%;
+  height: 100vh;
   margin: auto;
 }
 
